# PyInt

./: CLAUDE.md  CMakeLists.txt  PyInt.sln  README.md  build.sh
PyInt/: CMakeLists.txt  Common.h  PyInt.vcxproj  PyInt.vcxproj.filters  PyInt_Script  README.md  main.c
PyInt.Console/: CMakeLists.txt  PyInt.Console.vcxproj  main.c
PyInt/Bytecode/: Bytecode.c  Bytecode.h
PyInt/Compiler/: Compiler.c  Compiler.h  CompilerBytecode.c  CompilerBytecode.h  CompilerErrors.c  CompilerErrors.h  Helpers.c  Helpers.h  Local.c  Local.h
PyInt/Debug/: Debug.c  Debug.h
PyInt/HashTable/: HashTable.c
PyInt/Headers/: Bytecode.h  Common.h  Compiler.h  CompilerBytecode.h  CompilerErrors.h  Debug.h  HashTable.h  Helpers.h  InterpreterSettings.h  Local.h  Memory.h  NativeFunctions.h  Object.h  PrintInfo.h  PrintType.h  Repl.h  RunFile.h  Scanner.h  Token.h  VM.h  Value.h  Variable.h  VmPrint.h
PyInt/Memory/: Memory.c  Memory.h
PyInt/Object/: Object.c  Object.h
PyInt/Scanner/: Scanner.c  Scanner.h
PyInt/Services/Debug/: Debug.c
PyInt/Source/: Bytecode.c  Compiler.c  CompilerBytecode.c  CompilerErrors.c  Debug.c  HashTable.c  Helpers.c  InterpreterSettings.c  Local.c  Memory.c  NativeFunctions.c  Object.c  Repl.c  RunFile.c  Scanner.c  VM.c  Value.c  Variable.c  VmPrint.c  main.c
PyInt/Token/: Token.h
PyInt/VM/: VM.c  VM.h
PyInt/Value/: Value.c  Value.h
PyInt/src/: Repl.c  Repl.h  RunFile.c  RunFile.h  main.c
PyInt/src/Compilation/Bytecode/: CompilerBytecode.c  CompilerBytecode.h
PyInt/src/Compilation/Compiler/: Compiler.h  CompilerFunctions.c  CompilerFunctions.h
PyInt/src/Compilation/Errors/: Errors.c  Errors.h
PyInt/src/Compilation/Expressions/: Expressions.c  Expressions.h
PyInt/src/Compilation/Helpers/: Helpers.c  Helpers.h
PyInt/src/Compilation/ParseFunctions/: ParseFunctions.c  ParseFunctions.h
PyInt/src/Compilation/Services/: Services.c  Services.h
PyInt/src/Headers/: PrintType.h  RunMode.h  Token.h
PyInt/src/Services/Bytecode/: Bytecode.c  Bytecode.h  BytecodeFunctions.c  BytecodeFunctions.h
PyInt/src/Services/Debug/: Debug.h
PyInt/src/Services/Disassembly/: Disassembly.c  Disassembly.h
PyInt/src/Services/GarbageCollection/: GarbageCollection.c  GarbageCollection.h
PyInt/src/Services/Memory/: Memory.c  Memory.h
PyInt/src/Services/Scanner/: Scanner.c  Scanner.h  ScannerFunctions.c  ScannerFunctions.h
PyInt/src/Services/Table/: Table.c  Table.h  TableFunctions.c  TableFunctions.h
PyInt/src/Types/BoundMethod/: BoundMethod.h  BoundMethodFunctions.c  BoundMethodFunctions.h
PyInt/src/Types/Class/: Class.h  ClassFunctions.c  ClassFunctions.h
PyInt/src/Types/ClassInstance/: ClassInstance.h  ClassInstanceFunctions.c  ClassInstanceFunctions.h
PyInt/src/Types/Closure/: Closure.c  Closure.h  ClosureFunctions.c  ClosureFunctions.h
PyInt/src/Types/Function/: Function.c  Function.h  FunctionFunctions.c  FunctionFunctions.h
PyInt/src/Types/NativeFunction/: NativeFunction.c  NativeFunction.h  (+2 more)
test/: call.py  (+5 more)
(+139 files in other folders)
